<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerlayout_ketquachitiet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_ketquathichitiet"
                android:background="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">
                <ImageButton
                    android:id="@+id/imgbtn_ketquachitiet"
                    android:background="@drawable/ic_menu"
                    android:scaleType="fitXY"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <TextView
                    android:layout_marginLeft="30dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:text="Kết quả bài thi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.Toolbar>
            <ScrollView
                android:layout_below="@+id/toolbar_ketquathichitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_ketquachitietstt"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="Câu hỏi 1:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_ketquachitietcauhoi"
                        android:text="@string/cauhoi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rb_ketquachitiet_a"
                            android:enabled="false"
                            android:textColor="@android:color/holo_green_dark"
                            android:text="@string/dapana"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/rb_ketquachitiet_b"
                            android:enabled="false"
                            android:text="@string/dapanb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/rb_ketquachitiet_c"
                            android:enabled="false"
                            android:text="@string/dapanc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/rb_ketquachitiet_d"
                            android:enabled="false"
                            android:text="@string/dapand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RadioGroup>
                </LinearLayout>
            </ScrollView>
            <Button
                android:id="@+id/btn_ketquachitietquaylai"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:text="Quay lại"
                android:background="@android:color/holo_red_dark"
                android:layout_alignParentBottom="true"
                android:layout_width="120dp"
                android:layout_height="40dp" />
            <Button
                android:id="@+id/btn_ketquachitietcautiep"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:text="Câu tiếp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/holo_red_dark"
                android:layout_alignParentBottom="true"
                android:layout_width="120dp"
                android:layout_height="40dp" />
        </RelativeLayout>
        <android.support.design.widget.NavigationView
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:background="@android:color/holo_red_dark"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/logo"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />
                    <TextView
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="Nguyễn Mạnh Cường"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:text="SBD:DUK1-01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:text="Ngày sinh:11/10/2013"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_ketquachitiet_chuthich"
                        android:text="Chú thích:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="Màu xanh câu trả lời đúng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="Màu đỏ câu trả lời sai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="Màu vàng câu không trả lời"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <GridView
                    android:layout_margin="10dp"
                    android:verticalSpacing="5dp"
                    android:horizontalSpacing="5dp"
                    android:numColumns="5"
                    android:columnWidth="50dp"
                    android:stretchMode="none"
                    android:id="@+id/gridview_ketquachitiet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></GridView>
            </LinearLayout>
        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>